[project]
requires-python = ">=3.14"
name = "agent-base"
version = "0.1.0"
dependencies = [
  # FastAPI 后端核心
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  # 类型校验、数据解析
  "pydantic>=2.4.2",
  "pydantic-settings>=2.1.0",
  # 异步数据库ORM
  "sqlalchemy[asyncio]>=2.0.23",
  "psycopg2-binary>=2.9.9",
  # 日志
  "loguru>=0.7.2",
  # 大模型请求
  "httpx>=0.25.2",
  # 环境变量
  "python-dotenv>=1.0.0",
  # token计数
  "tiktoken>=0.5.2",
  "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.6", # 代码格式化、静态检查
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
